@@ -3,6 +3,7 @@ Version 8.16 (Unreleased)
 - Added data migration to create UserEmail objects for users whose primary emails did not have them
 - Time series data (used by graphs and other features) is now updated when groups are merged.
 - Added distributions to the release system to better support mobile apps
+- Update activity entries to reference issues by their short ID.
 
 Schema Changes
 ~~~~~~~~~~~~~~
